--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,42 @@ li > a {
   /*background styles */
   background-image: url("/../imgs/convention6.jpg"); }
 
+.small-banner {
+  height: 500px;
+  background-color: #E5E5E5;
+  margin-bottom: 50px;
+  text-align: center;
+  background-size: cover;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0))), url("../imgs/mountain2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("../imgs/mountain2.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  text-transform: uppercase; }
+  .small-banner h1 {
+    margin-top: 20px;
+    font-size: 50px;
+    padding-top: 40px;
+    color: white;
+    margin-bottom: 50px; }
+  .small-banner .rectangle-banner {
+    width: 500px;
+    height: 250px;
+    margin: 0 auto;
+    border: 3px solid #E5E5E5; }
+    .small-banner .rectangle-banner div {
+      margin-top: 40px; }
+      .small-banner .rectangle-banner div p {
+        font-size: 80px;
+        color: #EED484; }
+      .small-banner .rectangle-banner div hr {
+        color: white;
+        border: none;
+        background-color: white;
+        width: 200px;
+        height: 7px;
+        margin: 0 auto; }
+
 /* body styling */
 .intro {
   width: 50%;
@@ -252,7 +288,7 @@ li > a {
   border-top: 300px;
   margin: 35px auto 120px auto;
   font-style: italic;
-  color: #886e61; }
+  color: #E5E5E5; }
 
 .fourPillars {
   margin: 0 auto;
