--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,7 +8,7 @@
 $garnet : #762330;
 $lightRed: #C64A4A;
 $gold : #EED484;
-$dimGrey: #886e61;
+$dimGrey: #E5E5E5;
 $debugBorder: 1px solid black;
 $darkSlate: #2F3635;
 
@@ -258,7 +258,47 @@ ul {
 .banner2{
   /*background styles */
   background-image: url("/../imgs/convention6.jpg");
+}
+.small-banner {
+  height: 500px;
+  background-color: #E5E5E5;
+  margin-bottom: 50px;
+  text-align: center;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0)),url('../imgs/mountain2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  text-transform: uppercase;
 
+  h1 {
+    margin-top: 20px;
+    font-size: 50px;
+    padding-top: 40px;
+    color: white;
+    margin-bottom: 50px;
+  }
+  .rectangle-banner {
+    width: 500px;
+    height: 250px;
+    margin: 0 auto;
+    border: 3px solid $dimGrey;
+    div {
+      margin-top: 40px;
+      p {
+        font-size: 80px;
+        color: #EED484;
+      }
+      hr {
+        color: white;
+        border: none;
+        background-color: white;
+        width: 200px;
+        height: 7px;
+        margin: 0 auto;
+      }
+    }
+  }
 }
 /* body styling */
 
