--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -259,6 +259,7 @@ ul {
   /*background styles */
   background-image: url("/../imgs/convention6.jpg");
 }
+//small banner
 .small-banner {
   height: 500px;
   background-color: #E5E5E5;
