--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -121,9 +121,6 @@ $gold : #EED484;
 
   }
 @media only screen and (max-width: $med){
-  // body {
-  //   background-color: purple;
-  // }
   iframe {
 		width: 100%;
 	}
@@ -201,6 +198,20 @@ $gold : #EED484;
   }
   .banner-img {
     height: 470px;
+  }
+  .tiny-banner {
+    h1 {
+      font-size: 2.5em;
+    }
+  }
+  .small-banner{
+    h1 {
+      font-size: 2.5em;
+    }
+    .rectangle-banner {
+      width: 80%;
+      height: 250px;
+    }
   }
   .exec-container {
     width: 90%;
