--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -259,6 +259,26 @@ ul {
   /*background styles */
   background-image: url("/../imgs/convention6.jpg");
 }
+
+.tiny-banner {
+  height: 200px;
+  background-color: $lightRed;
+  margin-bottom: 50px;
+  text-align: center;
+  background-size: cover;
+  // background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0)),url('../imgs/pikeBack1.jpeg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  text-transform: uppercase;
+  h1 {
+    margin-top: 50px;
+    font-size: 50px;
+    padding-top: 50px;
+    color: white;
+    margin-bottom: 50px;
+  }
+}
 //small banner
 .small-banner {
   height: 500px;
@@ -309,7 +329,7 @@ ul {
   border-top: 300px;
   margin: 35px auto 120px auto;
   font-style: italic;
-  color: $dimGrey;
+  color: #9f9898;
 }
 
 .fourPillars {
