--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -161,6 +161,9 @@ ul {
         // border: $debugBorder;
       }
       .panel-stat {
+        display: flex;
+        // border: $debugBorder;
+        justify-content: center;
         p {
           font-size: 3em;
           color: white;
@@ -273,7 +276,7 @@ ul {
   text-transform: uppercase;
   h1 {
     margin-top: 50px;
-    font-size: 50px;
+    font-size: 45px;
     padding-top: 50px;
     color: white;
     margin-bottom: 50px;
