--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -194,7 +194,7 @@ ul {
   text-align: center;
   color: white;
   /*background styles */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://codetheweb.blog/assets/img/posts/full-image-hero/image.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://res.cloudinary.com/slickchris33/image/upload/v1545731786/city_ofsil7.jpg);
   // background-image: url('/../pikeBack.jpg');
   background-size: cover;
   background-position: center center;
@@ -256,11 +256,11 @@ ul {
 }
 .banner {
   /*background styles */
-  background-image: url("/../imgs/convention5.jpg");
+  background-image: url("https://res.cloudinary.com/slickchris33/image/upload/v1545730125/convention5_uthxyi.jpg");
 }
 .banner2{
   /*background styles */
-  background-image: url("/../imgs/convention6.jpg");
+  background-image: url("https://res.cloudinary.com/slickchris33/image/upload/v1545730026/convention6_q6yhcy.jpg");
 }
 
 .tiny-banner {
