--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,54 @@ li > a {
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  /* debug class*/ }
+  .menu .border-debug {
+    border: 1px solid black; }
+
+/*========= dropdown border============ */
+.dropdown {
+  float: left;
+  overflow: hidden; }
+  .dropdown .dropbtn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    font-size: 16px; }
+
+.dropdown:hover, .dropbtn, .dropbtn:focus {
+  background-color: #EED484; }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #EED484;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left; }
+    .dropdown-content a:hover {
+      background-color: #ddd; }
+
+.show {
+  display: block; }
 
 .links {
   display: -webkit-box;
@@ -187,8 +234,8 @@ li > a {
   text-align: center;
   color: white;
   /*background styles */
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../imgs/pikeCity.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/pikeCity.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../imgs/pikeCity-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/pikeCity-min.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -246,11 +293,13 @@ li > a {
 
 .banner {
   /*background styles */
-  background-image: url("../imgs/convention5.jpg"); }
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.5))), url("../imgs/convention5-min.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url("../imgs/convention5-min.jpg"); }
 
 .banner2 {
   /*background styles */
-  background-image: url("../imgs/convention6.jpg"); }
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.5))), url("../imgs/convention6-min.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url("../imgs/convention6-min.jpg"); }
 
 .tiny-banner {
   height: 200px;
@@ -275,8 +324,8 @@ li > a {
   margin-bottom: 50px;
   text-align: center;
   background-size: cover;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0))), url("../imgs/mountain2.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("../imgs/mountain2.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0))), url("../imgs/mountain2-min.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("../imgs/mountain2-min.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
