--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -112,9 +112,60 @@ ul {
   width: 1500px;
   display: flex;
   justify-content: space-between;
-
+/* debug class*/
+.border-debug {
+  border: 1px solid black;
+}
 
 }
+
+/*========= dropdown border============ */
+.dropdown {
+  float:left;
+  overflow: hidden;
+  .dropbtn {
+    display: flex;
+    justify-content: center;
+    cursor:pointer;
+    border:none;
+    outline: none;
+    color:white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    font-size: 16px;
+  }
+}
+
+.dropdown:hover,.dropbtn,.dropbtn:focus {
+  background-color: $gold;
+}
+
+.dropdown-content {
+  // margin: 10px;
+  display:none;
+  position: absolute;
+  background-color: $gold;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    &:hover {
+      background-color:#ddd;
+    }
+  }
+}
+.show {
+  display: block;
+}
+
+
 .links {
   display: flex;
   justify-content: flex-end;
@@ -194,7 +245,7 @@ ul {
   text-align: center;
   color: white;
   /*background styles */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../imgs/pikeCity.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../imgs/pikeCity-min.jpg);
   // background-image: url('/../pikeBack.jpg');
   background-size: cover;
   background-position: center center;
@@ -256,11 +307,11 @@ ul {
 }
 .banner {
   /*background styles */
-  background-image: url("../imgs/convention5.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.5)),url("../imgs/convention5-min.jpg");
 }
 .banner2{
   /*background styles */
-  background-image: url("../imgs/convention6.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.5)),url("../imgs/convention6-min.jpg");
 }
 
 .tiny-banner {
@@ -289,7 +340,7 @@ ul {
   margin-bottom: 50px;
   text-align: center;
   background-size: cover;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0)),url('../imgs/mountain2.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0)),url('../imgs/mountain2-min.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
