--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -120,49 +120,53 @@ ul {
 }
 
 /*========= dropdown border============ */
-.dropdown {
-  float:left;
-  overflow: hidden;
-  .dropbtn {
-    display: flex;
-    justify-content: center;
-    cursor:pointer;
-    border:none;
-    outline: none;
-    color:white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    font-size: 16px;
-  }
+.dropbtnX {
+  background-color: $garnet;
+  color: white;
+  padding: 0 16px 16px 16px;
+  font-size: 16px;
+  border: none;
 }
 
-.dropdown:hover,.dropbtn,.dropbtn:focus {
-  background-color: $gold;
+.dropdownX {
+  position: relative;
+  display: inline-block;
 }
 
-.dropdown-content {
-  // margin: 10px;
-  display:none;
+.dropdown-contentX {
+  display: none;
   position: absolute;
-  background-color: $gold;
+  background-color: rgba(255, 249, 222, 1);
+  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    &:hover {
-      background-color:#ddd;
+}
+
+.dropdown-contentX a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-contentX a:hover {background-color: #ddd;}
+
+.dropdownX:hover .dropdown-contentX {display: block;}
+
+.dropdownX:hover .dropbtnX {background-color: $gold; color:black;}
+
+#responsive-dropdown {
+  li {
+    // display: none;
+    padding: 56px;
+    margin: 10px;
+    &:hover{
+      color: #d64541;
     }
   }
 }
-.show {
-  display: block;
+#responsive-dropdown-btn:hover #responsive-dropdown {
+  display:block;
 }
 
 
